# fti

./: .gitignore  README.md  fti.csv
scraper/: fti.py  pyproject.toml
