[tool.poetry]
name = "fti"
version = "0.1.0"
description = ""
authors = ["Vexl <vexl@vexl.foundation>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
iso3166 = "^2.1.1"
requests = "^2.31.0"
requests-cache = "^1.0.1"
lxml = "^4.9.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
