[tool.poetry]
name = "fti"
version = "0.1.0"
description = ""
authors = ["Vexl <vexl@vexl.foundation>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
iso3166 = "^2.1.1"
requests = "^2.31.0"
requests-cache = "^1.2.0"
lxml = "^5.1.0"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
